--- a/frontend/src/assets/styles/index.css
+++ b/frontend/src/assets/styles/index.css
@@ -43,6 +43,41 @@ table th {
   margin-top: 10px;
 }
 
+/* .carousel-caption {
+  position: absolute;
+  width: 500%;
+  left: 0;
+  right: 0;
+  bottom: 0;
+  background: rgba(0, 0, 0, 0.5);
+} */
+
+
+
+.product-carousel-container {
+  position: relative;
+  overflow: hidden;
+}
+
+.carousel-item {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  height: 600px; /* Adjust the height as needed */
+}
+
+.image-container {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  max-height: 100%;
+}
+
+.image-container img {
+  max-height: 100%;
+  max-width: 100%;
+}
+
 .carousel-caption {
   position: absolute;
   width: 100%;
@@ -51,6 +86,9 @@ table th {
   bottom: 0;
   background: rgba(0, 0, 0, 0.5);
 }
+
+
+
 
 .button-container {
   display: flex;
